# cosyne

./: .gitignore  Cargo.toml  README.md
examples/: cart_pole.rs  inverted_pendulum.rs  mountain_car.rs  pendulum.rs  xor.rs
src/: activation.rs  activations.rs  config.rs  cosyne.rs  environment.rs  genome.rs  layer.rs  lib.rs  network.rs  permutation_prob_f.rs  plot.rs  population.rs
tests/: xor.rs
