[package]
name = "cosyne"
version = "0.2.0"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
rulinalg = "0.3.4"
log = "0.4.0"
pretty_env_logger = "0.4"

cge = { git = "https://github.com/MathisWellmann/cge" }

sdl2 = { version = "0.32.2", features = ["gfx", "ttf"], optional = true}
random_color = { version = "0.4.4", optional = true }

[dev-dependencies]
round = "0.1.0"

[[example]]
name = "xor"

[[example]]
name = "cart_pole"
required-features = ["sdl2", "random_color"]

