[package]
name = "cosyne"
version = "0.3.2"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
plot = [
    "plotters"
]

[dependencies]
rand = "0.8.3"
rand_distr = "0.4.0"
log = "0.4.0"
pretty_env_logger = "0.4"
failure = "0.1.8"
rulinalg = "0.4.2"

gym-rs = { version = "0.2.1", optional = true }
plotters = { version = "0.3.0", optional = true}

[dev-dependencies]
round = "0.1.0"

[[example]]
name = "cart_pole"
required-features = [ "gym-rs" ]

[[example]]
name = "mountain_car"
required-features = [ "gym-rs", "plotters" ]

[[example]]
name = "pendulum"
required-features = [ "gym-rs", "plotters" ]
